--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
       <section class="jumbotron text-center">
         <div class="container">
           <h1 class="jumbotron-heading">Woodley Airfield</h1>
-          <p class="lead text-muted">Woodley Airfield has a rich history of avaiation, the new roads reflect aerospeace industry.</p>
+          <p class="lead text-muted">Woodley Airfield has a rich history of avaiation, the new roads reflect aerospace industry.</p>
          
         </div>
       </section>
@@ -62,7 +62,9 @@
 
           <div class="row">
             <div class="card" >
-              <img class="card-img"src="images/beaver.jpg" alt="Beaver Way">
+              <a href="#" data-toggle="modal" data-target="#basicModal">
+              <img class="card-img" src="images/beaver.jpg" alt="Beaver Way">
+              </a>
             </div>
           </div>  
           <div class="row">  
@@ -98,6 +100,27 @@
  
         </div>
       </div>
+
+      <!-- Modal -->
+    <div class="modal fade" id="basicModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+      <div class="modal-dialog" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+          <div class="modal-body">
+            ...
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+            <button type="button" class="btn btn-primary">Save changes</button>
+          </div>
+        </div>
+      </div>
+    </div>
 
     </main>
 
