--- a/index.html
+++ b/index.html
@@ -60,18 +60,61 @@
       <div class="album text-muted">
         <div class="container" > 
 
-          <div class="row">
+        <div class="row">
             <div class="card" >
-              <a href="#" data-toggle="modal" data-target="#basicModal">
+              <a href="#" data-toggle="modal" data-target="#beaverModal">
               <img class="card-img" src="images/beaver.jpg" alt="Beaver Way">
               </a>
             </div>
-          </div>  
-          <div class="row">  
-            <div class="card">
-              <img class="card-img-top"src="images/kittiwake.jpg" alt="Beaver Way">
+            <div class="modal fade" id="beaverModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true"> 
+                <div class="modal-dialog" role="document">
+                  <div class="modal-content">
+                    <div class="modal-header">
+                      <h5 class="modal-title" id="modalId">Beaver Way</h5>
+                      <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                      </button>
+                    </div>
+                    <div class="modal-body">
+                      </p>Beaver Way is named after the de Havilland Canada DHC-2 Beaver, a single-engined high-wing propeller-driven short takeoff and landing (STOL) aircraft developed and manufactured by aircraft company de Havilland Canada. It has been primarily operated as a bush plane and has been used for wide variety of utility roles, such as cargo and passenger hauling, aerial application (crop dusting and aerial topdressing), and civil aviation duties.</p>
+                       <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/ab/VH-IDO_De_Havilland_Canada_DHC-2_Beaver_Mk1_Airwaves_Gold_Coast_%288402101541%29.jpg/320px-VH-IDO_De_Havilland_Canada_DHC-2_Beaver_Mk1_Airwaves_Gold_Coast_%288402101541%29.jpg">
+                    </div>
+                    <div class="modal-footer">
+                      <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>  
+        </div>
+         
+        <div class="row">
+            <div class="card" >
+              <a href="#" data-toggle="modal" data-target="#kittiwakeModal">
+              <img class="card-img" src="images/kittiwake.jpg" alt="Beaver Way">
+              </a>
             </div>
-          </div>  
+            <div class="modal fade" id="kittiwakeModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true"> 
+                <div class="modal-dialog" role="document">
+                  <div class="modal-content">
+                    <div class="modal-header">
+                      <h5 class="modal-title" id="titleId">Kittiwake Close</h5>
+                      <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                      </button>
+                    </div>
+                    <div class="modal-body">
+                      </p> The Kittiwake was a small two seater aircraft designed for amateur building. It was created by Mitchell-Procter.</p>
+                       <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/46/Mitchell_Kittiwake_1_G-ATXN_ABIN_11.05.03R_edited-2.jpg/320px-Mitchell_Kittiwake_1_G-ATXN_ABIN_11.05.03R_edited-2.jpg">
+                    </div>
+                    <div class="modal-footer">
+                      <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                    </div>
+                  </div>
+                </div>
+            </div>  
+        </div>
+     
           <div class="row">  
             <div class="card">
               <img class="card-img-top"src="images/mitchell.jpg" alt="">
@@ -100,28 +143,6 @@
  
         </div>
       </div>
-
-      <!-- Modal -->
-    <div class="modal fade" id="basicModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-      <div class="modal-dialog" role="document">
-        <div class="modal-content">
-          <div class="modal-header">
-            <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
-            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-              <span aria-hidden="true">&times;</span>
-            </button>
-          </div>
-          <div class="modal-body">
-            ...
-          </div>
-          <div class="modal-footer">
-            <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-            <button type="button" class="btn btn-primary">Save changes</button>
-          </div>
-        </div>
-      </div>
-    </div>
-
     </main>
 
     <footer class="text-muted">
