--- a/index.html
+++ b/index.html
@@ -265,8 +265,9 @@
                     </button>
                   </div>
                   <div class="modal-body">
-                    </p> The Hawker Hurricane is a British single-seat fighter aircraft of the 1930s–1940s that was designed and predominantly built by Hawker Aircraft Ltd for the Royal Air Force (RAF).</p>
-                     <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/28/Hurricane_mk1_r4118_fairford_arp.jpg/320px-Hurricane_mk1_r4118_fairford_arp.jpg">
+                    </p>The de Havilland DH.82 Tiger Moth is a 1930s biplane designed by Geoffrey de Havilland and built by the de Havilland Aircraft Company.</p>
+                    <p>The Tiger Moth remained in service with the RAF until it was succeeded and replaced by the de Havilland Chipmunk during the early 1950s.</p>
+                     <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/35/DH_82A_Tiger_Moth_-_N81DH.jpg/320px-DH_82A_Tiger_Moth_-_N81DH.jpg">
                   </div>
                   <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
