--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
             <script>
               function initMap() {
                 var uluru = {lat: 51.452876, lng: -0.886732}; 
+                var uluru = {lat: 50.452876, lng: 0.886732};
                 var map = new google.maps.Map(document.getElementById('map'), {
                   zoom: 16,
                   center: uluru
@@ -301,6 +302,65 @@
                     <p> The Handley Page Victor was a British jet-powered strategic bomber, developed and produced by the Handley Page Aircraft Company, which served during the Cold War.</p>
                     <p>The Victor had been developed to perform as part of the United Kingdom’s airborne nuclear deterrent. In 1968, the type was retired from the nuclear mission following the discovery of fatigue cracks, which had been exacerbated by the RAF's adoption of a low-altitude flight profile to avoid interception.</p>
                     <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/18/Raf_victor_in_1961_arp.jpg/320px-Raf_victor_in_1961_arp.jpg">
+                  </div>
+                  <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                  </div>
+                </div>
+              </div>
+          </div>  
+        </div>
+
+        <!--Bader  !-->
+        <div class="row">
+          <div class="card" >
+            <a href="#" data-toggle="modal" data-target="#baderModal">
+            <img class="card-img" src="images/bader.jpg" alt="Bader Way">
+            </a>
+          </div>
+          <div class="modal fade" id="baderModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true"> 
+              <div class="modal-dialog" role="document">
+                <div class="modal-content">
+                  <div class="modal-header">
+                    <h5 class="modal-title" id="titleId">Bader Way</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                      <span aria-hidden="true">&times;</span>
+                    </button>
+                  </div>
+                  <div class="modal-body">
+                    </p>Douglas Bader also known as Sir Douglas Robert steuart Bader , who fought in WW2 as a jet fighter , was a pilot who crashed down in woodley , losing both of his legs.Bader joind the RAF in 1928 , after he crashed he was on the brink of death , but still joined the RAF once more and returned as a pilot.</p>
+                    
+                     <img src="https://upload.wikimedia.org/wikipedia/commons/5/52/Douglas_Bader_headshot.jpg">
+                  </div>
+                  <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                  </div>
+                </div>
+              </div>
+          </div>  
+        </div>
+
+        <!--Wright  !-->
+        <div class="row">
+          <div class="card" >
+            <a href="#" data-toggle="modal" data-target="#wrightModal">
+            <img class="card-img" src="images/wright.jpg" alt="Wright Close">
+            </a>
+          </div>
+          <div class="modal fade" id="wrightModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true"> 
+              <div class="modal-dialog" role="document">
+                <div class="modal-content">
+                  <div class="modal-header">
+                    <h5 class="modal-title" id="titleId">Wright Close</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                      <span aria-hidden="true">&times;</span>
+                    </button>
+                  </div>
+                  <div class="modal-body">
+                    <p>The Wright Brothers , Orville and Wilbur Wright , created the first sucssesful  flying machine . Orville was born in 1871 and died at the age of 76 , Wilbur, however, was born in 1867 and died at the age of 45.</p>
+                    
+                    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/af/Orville_Wright_1905-crop.jpg/384px-Orville_Wright_1905-crop.jpg">
+                    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/38/Wilbur_Wright-crop.jpg/384px-Wilbur_Wright-crop.jpg">
                   </div>
                   <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
