--- a/index.html
+++ b/index.html
@@ -23,15 +23,15 @@
         <div class="container">
           <div class="row">
             <div class="col-sm-8 py-4">
-              <h4 class="text-white">About</h4>
+              <h4 class="text-red">About</h4>
               <p class="text-muted">Woodleys airfield history is long and interesting , there are many things to look , study and learn about.</p>
             </div>
             <div class="col-sm-4 py-4">
               <h4 class="text-white">Contact</h4>
               <ul class="list-unstyled">
-                <li><a href="https://twitter.com/MLGturtleGaming" class="text-white">Follow on Twitter</a></li>
-                <li><a href="#" class="text-white">Like on Facebook</a></li>
-                <li><a href="#" class="text-white">Email me</a></li>
+                <li><a href="https://twitter.com/MLGturtleGaming" class="text-blue">Follow on Twitter</a></li>
+                <li><a href="#" class="text-blue">Like on Facebook</a></li>
+                <li><a href="#" class="text-blue">Email me</a></li>
               </ul>
             </div>
           </div>
