--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
                       </button>
                     </div>
                     <div class="modal-body">
-                      </p>Beaver Way is named after the de Havilland Canada DHC-2 Beaver, a single-engined high-wing propeller-driven short takeoff and landing (STOL) aircraft developed and manufactured by aircraft company de Havilland Canada. It has been primarily operated as a bush plane and has been used for wide variety of utility roles, such as cargo and passenger hauling, aerial application (crop dusting and aerial topdressing), and civil aviation duties.</p>
+                      <p>Beaver Way is named after the de Havilland Canada DHC-2 Beaver, a single-engined high-wing propeller-driven short takeoff and landing (STOL) aircraft developed and manufactured by aircraft company de Havilland Canada. It has been primarily operated as a bush plane and has been used for wide variety of utility roles, such as cargo and passenger hauling, aerial application (crop dusting and aerial topdressing), and civil aviation duties.</p>
                        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/ab/VH-IDO_De_Havilland_Canada_DHC-2_Beaver_Mk1_Airwaves_Gold_Coast_%288402101541%29.jpg/320px-VH-IDO_De_Havilland_Canada_DHC-2_Beaver_Mk1_Airwaves_Gold_Coast_%288402101541%29.jpg">
                     </div>
                     <div class="modal-footer">
