--- a/index.html
+++ b/index.html
@@ -452,7 +452,7 @@
                       </button>
                     </div>
                     <div class="modal-body">
-                      <p>Douglas Bader also known as Sir Douglas Robert steuart Bader , who fought in WW2 as a jet fighter , was a pilot who crashed down in woodley , losing both of his legs.Bader joind the RAF in 1928 , after he crashed he was on the brink of death , but still joined the RAF once more and returned as a pilot.</p>        
+                      <p>Douglas Bader also known as Sir Douglas Robert steuart Bader, who fought in WW2 as a jet fighter, was a pilot who crashed down in Woodley, losing both of his legs. Bader joined the RAF in 1928, after he crashed he was on the brink of death, but still joined the RAF once more and returned as a pilot.</p>        
                       <img src="https://upload.wikimedia.org/wikipedia/commons/5/52/Douglas_Bader_headshot.jpg">
                     </div>
                     <div class="modal-footer">
@@ -480,7 +480,8 @@
                       </button>
                     </div>
                     <div class="modal-body">
-                      <p>The Wright Brothers , Orville and Wilbur Wright , created the first sucssesful  flying machine . Orville was born in 1871 and died at the age of 76 , Wilbur, however, was born in 1867 and died at the age of 45.</p>
+                      <p>The Wright Brothers, Orville and Wilbur Wright, created the first sucssesful  flying machine. Orville was born in 1871 and died at the age of 76 , Wilbur, however, was born in 1867 and died at the age of 45.</p>
+                      <p>Sadly Wilbur Wright fell ill on a trip to Boston in April 1912, after being infected with the typhoid fever, he died a month later.</p>
                       
                       <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/af/Orville_Wright_1905-crop.jpg/384px-Orville_Wright_1905-crop.jpg">
                       <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/38/Wilbur_Wright-crop.jpg/384px-Wilbur_Wright-crop.jpg">
