--- a/index.html
+++ b/index.html
@@ -52,8 +52,7 @@
       <section class="jumbotron text-center">
         <div class="container">
           <h1 class="jumbotron-heading">Woodley Airfield</h1>
-          <p class="lead text-muted">Woodley Airfield has a rich history of avaiation, the new roads reflect aerospace industry.</p>
-         
+          <p class="lead text-muted">Woodley Airfield has a rich history of avaiation, the new road names have an aeronautical theme. This site aims to provide some background to these names.</p> 
         </div>
       </section>
 
