--- a/index.html
+++ b/index.html
@@ -75,6 +75,7 @@
                 var milesURL = {lat: 51.451261, lng: -0.886573};
                 var orvilleURL = {lat: 51.451026, lng: -0.888681}; 
                 var cometURL = {lat: 51.452611, lng: -0.886589};
+                var tigerURL = {lat: 51.453386, lng: -0.884035}; 
                 var map = new google.maps.Map(document.getElementById('map'), {
                   zoom: 16,
                   center: centreURL
@@ -139,6 +140,11 @@
                   title: 'Comet Way',
                   map: map
                 });
+                var markerTiger = new google.maps.Marker({
+                  position: tigerURL,
+                  title: 'Tiger Close',
+                  map: map
+                });
 
 
                 markerArmstrong.addListener('click', function() {
@@ -176,6 +182,9 @@
                 });
                 markerComet.addListener('click', function() {
                   $('#cometModal').modal('show')  
+                });
+                markerTiger.addListener('click', function() {
+                  $('#tigerModal').modal('show')  
                 });
               }
 
